--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -188,7 +188,7 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
   > .command {
     flex-grow: 1;
 
-    .icon {
+    > .icon {
       width: 2em;
       height: 2em;
     }
@@ -272,6 +272,11 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
       }
     }
   }
+}
+
+.cosense-icon {
+  background-image: url('./cosense.png');
+  background-size: cover;
 }
 
 .tweet {
@@ -577,6 +582,26 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
 .settings-form-label {
   margin-bottom: 0;
   font-weight: normal;
+}
+
+.settings-select-icon {
+  display: flex;
+  align-items: center;
+
+  > input[type='radio'] {
+    margin-right: map.get($bs-spacers, 1);
+  }
+
+  > label {
+    display: flex;
+    align-items: center;
+
+    > .sample-icon {
+      width: 2rem;
+      height: 2rem;
+      margin-right: map.get($bs-spacers, 1);
+    }
+  }
 }
 
 .text-template-input {
