--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -275,8 +275,10 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
 }
 
 .cosense-icon {
-  background-image: url('./cosense.png');
-  background-size: cover;
+  > img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .tweet {
