--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@use '~/lib/component/x-icon';
 
 $prefix: '' !default;
 $bs-prefix: bs- !default;
@@ -597,10 +598,12 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
   > label {
     display: flex;
     align-items: center;
+    width: 6rem;
 
     > .sample-icon {
       width: 2rem;
-      height: 2rem;
+      height: auto;
+      aspect-ratio: 1;
       margin-right: map.get($bs-spacers, 1);
     }
   }
