--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -545,6 +545,10 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
 .settings-item-input {
   display: flex;
   flex-wrap: wrap;
+
+  &:not(:has(> .settings-telomere)) {
+    padding-left: 1rem;
+  }
 }
 
 .settings-telomere {
