--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -706,3 +706,29 @@ $focus-visible-outline: var(--#{$bs-prefix}primary) solid 1px;
   gap: map.get($bs-spacers, 2);
   align-items: center;
 }
+
+.load-storage-error-header {
+  margin-left: map.get($bs-spacers, 3) + map.get($bs-spacers, 3) + 1rem;
+  font-weight: bold;
+  color: var(--#{$bs-prefix}red);
+}
+
+.load-storage-error {
+  margin-top: map.get($bs-spacers, 1);
+  margin-right: map.get($bs-spacers, 3);
+  margin-bottom: map.get($bs-spacers, 1);
+  margin-left: map.get($bs-spacers, 3) + map.get($bs-spacers, 3) + 2rem;
+  font-size: 0.875rem;
+  line-height: 1;
+  color: var(--#{$bs-prefix}red);
+}
+
+.load-storage-multiline-error {
+  max-height: 10rem;
+  padding: map.get($bs-spacers, 1);
+  overflow: auto;
+  border-color: var(--#{$bs-prefix}border-color);
+  border-style: var(--#{$bs-prefix}border-style);
+  border-width: var(--#{$bs-prefix}border-width);
+  border-radius: var(--#{$bs-prefix}border-radius);
+}
