--- a/src/clipboard/index.scss
+++ b/src/clipboard/index.scss
@@ -1,7 +1,7 @@
 @use 'sass:meta';
 @use 'bootstrap/scss/bootstrap';
 
-.scrapbox-copy-tweets {
+.scrapbox-quote-tweets {
   display: flex;
   flex-direction: column;
   max-width: 744px;
