--- a/src/content-twitter/index.scss
+++ b/src/content-twitter/index.scss
@@ -16,7 +16,7 @@ $fav-color: rgb(249, 24, 128);
   transition-property: background-color, border-color;
 }
 
-@keyframes scrapbox-copy-tweets-in-progress {
+@keyframes scrapbox-quote-tweets-in-progress {
   0% {
     transform: scale(0);
   }
@@ -26,7 +26,7 @@ $fav-color: rgb(249, 24, 128);
   }
 }
 
-.scrapbox-copy-tweets {
+.scrapbox-quote-tweets {
   display: flex;
   flex-basis: auto;
   flex-direction: column;
@@ -70,7 +70,7 @@ $fav-color: rgb(249, 24, 128);
         background-color: rgba($fav-color, 0.1);
         border-color: transparent;
         opacity: 0;
-        animation: scrapbox-copy-tweets-in-progress 1s infinite;
+        animation: scrapbox-quote-tweets-in-progress 1s infinite;
       }
 
       &:hover {
